# tecio

./: ReleaseNotes.md
.github/workflows/: conda-release-upload.yml  conda-variants.yml
conda/: build_tecio.bat  build_tecio.sh  build_tecio_mpi.bat  build_tecio_mpi.sh  conda_build_config.yaml  meta.yaml  tecioConfig.cmake.in  teciompiConfig.cmake.in
examples/: buildandtestall.py
teciompisrc/: 00_README.txt  AltTecUtil.h  AnyTypeLightweightVector.h  AtomicMinMax.h  AuxData_s.h  CMakeLists.txt  DataSetWriterMPI.cpp  DataSetWriterMPI.h  FECellSubzoneCompressor.cpp  FieldData.cpp  FieldData_s.h  FileIOStream.cpp  FileIOStreamInterface.h  FileReaderInterface.h  FileStreamWriter.cpp  FileSystem.cpp  FileWriterInterface.h  GLOBAL.h  GhostInfo_s.h  IJKSubzoneInfo.cpp  IJKSubzoneInfo.h  IJKZoneInfo.cpp  IJKZoneInfo.h  IntervalTree.cpp  IntervalTree.h  ItemAddress.h  ItemSetIterator.h  MPICommunicationCache.cpp  MPICommunicationCache.h  MPICommunicator.cpp  MPICommunicator.h  MPIFileIOStream.cpp  MPIFileIOStream.h  MPIFileReader.cpp  MPIFileReader.h  MPIFileWriter.cpp  MPIFileWriter.h  MPINonBlockingCommunicationCollection.cpp  MPINonBlockingCommunicationCollection.h  MPIUtil.cpp  (+68 more)
teciosrc/: 00_README.txt  ALLOC.h  ARRLIST.h  AUXDATA.h  AsciiOutputInfo.cpp  AsciiOutputInfo.h  BitArray.h  CHARTYPE.h  CMakeLists.txt  CodeContract.h  CszConnectivity.h  DATAIO.h  DATAIO4.h  DATASET.h  DATASET0.h  DATASHR.h  DATAUTIL.h  DataSetWriter.cpp  DataSetWriter.h  DataWriteStatisticsInterface.h  FACE.h  FECellSubzoneCompressor.h  FESubzonePartitionerInterface.h  FEZoneInfo.h  FILESTREAM.h  FaceNeighborGeneratorAbstract.cpp  FaceNeighborGeneratorAbstract.h  FieldData.h  FieldData_s.cpp  FileDescription.cpp  FileDescription.h  FileIOStatistics.h  FileIOStream.h  FileStreamReader.cpp  FileStreamReader.h  FileStreamWriter.h  FileSystem.h  GEOM.h  GEOM2.h  Geom_s.cpp  (+85 more)
